better spacing around the big image, fixing thumbnails

--- a/css/vatican_manuscripts.css
+++ b/css/vatican_manuscripts.css
@@ -80,11 +80,16 @@ h1, h2, h3 {
 	display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 1rem;
 }
 
 img.ms_thumbnail {
-	height:5rem;
+	max-height:5rem;
 	width:auto;
 	padding-right: 1rem;
+}
+
+.mss_list {
+	padding-bottom: 1rem;
+	padding-top: 1rem;
+
 }
